# flaskfarm-dev

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.sample.yaml  pyproject.toml
.devcontainer/: devcontainer.json
docker/: .env  Dockerfile  docker-compose.sample.yaml  docker-compose.yaml
docker/etc/s6-overlay/s6-rc.d/init-flaskfarm/: run
docker/etc/s6-overlay/s6-rc.d/svc-sshd/: run
docker/root/etc/flaskfarm-dev/: pyproject.toml  requirements.txt
docker/root/etc/flaskfarm-dev/.devcontainer/: devcontainer.json
docker/root/etc/flaskfarm-dev/data/: config.yaml  ff-profile.sh  init  svc
docker/root/etc/s6-overlay/s6-rc.d/init-flaskfarm/: run  up
docker/root/etc/s6-overlay/s6-rc.d/svc-flaskfarm/: run
docker/tmp/flaskfarm-dev/: pyproject.toml  requirements.txt
docker/tmp/flaskfarm-dev/.devcontainer/: devcontainer.json  flaskfarm-dev.code-workspace
docker/tmp/flaskfarm-dev/data/: config.yaml  ff-profile.sh  init
