[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flaskfarm-dev"
version = "0.1.14"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["flaskfarm"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }